# tree-sitter-grug

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  example.grug  go.mod  grammar.js  package.json  pyproject.toml  setup.py  test_highlight.sh  test_parse.sh  tree-sitter.json
bindings/c/: tree-sitter-grug.pc.in
bindings/c/tree_sitter/: tree-sitter-grug.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_grug/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterGrugTests/: TreeSitterGrugTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
