[package]
name = "tree-sitter-grug"
description = "A tree sitter parser for grug"
version = "0.2.0"
authors = ["xijnim <xijnin@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "grug"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/xijnim/tree-sitter-grug.git"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.8"
